deploy/portal/common-raytrain-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raytrain-spking-vke-proxy
  namespace: guofeng-su
  annotations:
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User,X-Auth-Request-Email,X-Auth-Request-Groups,X-Auth-Request-Preferred-Username,X-Auth-Request-Access-Token
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-body-size: 2g
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-ssl-name: raytrain.wellspiking.ai
    nginx.ingress.kubernetes.io/proxy-ssl-server-name: "on"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "on"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: raytrain.wellspiking.ai
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: spiking.wellspiking.ai
      http:
        paths:
          - path: /raytrain/(api/.*|ray/.*|mlflow/.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vke-raytrain-alb
                port:
                  name: https
